# simdjson-rust

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE.txt  README.md  appveyor.yml  build.rs
.github/workflows/: CI.yml
csrc/: quickstart.cpp  simdjson.cpp  simdjson.h  wrapper.cpp  wrapper.h
examples/: issue_20.rs  quickstart.rs  quickstart_serde.rs  simple.rs
include/: simdjson_cxx.h
json-examples/: issue_20.json
simdjson-sys/: Cargo.toml  README.md  build.rs
simdjson-sys/csrc/: wrapper.cpp  wrapper.h
simdjson-sys/src/: lib.rs  simdjson_c_api.cpp  simdjson_c_api.h
src/: bridge.rs  builder.rs  constants.rs  error.rs  implementation.rs  json_ioutil.rs  json_parser.rs  lib.rs  libsimdjson.rs  macros.rs  main.rs  padded_string.rs  parsed_json.rs  parsed_json_iterator.rs  prelude.rs  simdjson_cxx.cc  utils.rs
src/dom/: array.rs  document.rs  document_stream.rs  element.rs  mod.rs  object.rs  parser.rs  utils.rs
src/ondemand/: array.rs  array_iterator.rs  de.rs  document.rs  field.rs  iter_mut.rs  iterator.rs  json_type.rs  mod.rs  number.rs  object.rs  object_iterator.rs  parser.rs  raw_json_string.rs  types.rs  value.rs
src/serde/: de.rs  mod.rs  ser.rs  value.rs
tests/: basic_tests.rs  builder_tests.rs  serde_tests.rs
