[package]
name = "simdjson-rust"
version = "0.3.0"
authors = ["SunDoge <384813529@qq.com>"]
edition = "2018"
links = "simdjson-rust"
license = "Apache-2.0"


[workspace]
members = ["simdjson-sys"]


[dependencies]
thiserror = "1.0"
# anyhow = "1.0"
simdjson-sys = { path = "simdjson-sys" }

# serde compatibilty
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }


[features]
default = []

# serde compatibility
serde_impl = ["serde", "serde_json"]
