[package]
name = "simdjson-rust"
version = "0.3.0-alpha"
authors = ["SunDoge <384813529@qq.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Rust bindings for the simdjson project."
homepage = "https://crates.io/crates/simdjson-rust"
documentation = "https://docs.rs/simdjson-rust"
repository = "https://github.com/SunDoge/simdjson-rust"
readme = "README.md"
exclude = [".github/", "examples/"]


[workspace]
members = ["simdjson-sys"]


[dependencies]
thiserror = "1.0"
simdjson-sys = { path = "simdjson-sys" }

# serde compatibilty
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }


[features]
default = []

# serde compatibility
serde_impl = ["serde", "serde_json"]
