[package]
name = "simdjson-rust"
version = { workspace = true }
authors = ["SunDoge <384813529@qq.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Rust bindings for the simdjson project."
homepage = "https://crates.io/crates/simdjson-rust"
documentation = "https://docs.rs/simdjson-rust"
repository = "https://github.com/SunDoge/simdjson-rust"
readme = "README.md"
exclude = [".github/", "examples/"]


[workspace]
resolver = "2"
members = ["simdjson-sys"]

[workspace.package]
version = "0.3.0-alpha.1"

[workspace.dependencies]
simdjson-sys = { path = "simdjson-sys", version = "0.1.0-alpha.1" }


[dependencies]
thiserror = "1.0"
simdjson-sys = { workspace = true }

# serde compatibilty
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }


[features]
default = []

# serde compatibility
serde_impl = ["serde", "serde_json"]
