[package]
name = "simdjson-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = ["simdjson/", "!simdjson/singleheader/simdjson.*"]

[dependencies]

[build-dependencies]
bindgen = "0.66.1"
cc = { version = "1.0.83", features = ["parallel"] }
