[package]
name = "simdjson-sys"
version = "0.2.0-alpha"
edition = "2021"
authors = ["SunDoge <384813529@qq.com>"]
license = "Apache-2.0"
description = "Low level Rust bindings for simdjson."
homepage = "https://crates.io/crates/simdjson-sys"
documentation = "https://docs.rs/simdjson-sys"
repository = "https://github.com/SunDoge/simdjson-rust/tree/master/simdjson-sys"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = ["simdjson/", "!simdjson/singleheader/simdjson.*"]

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
cc = { version = "1.2.56", features = ["parallel"] }
